<resources>
    <string name="app_name">GetGo</string>

    <string name="tab_rent_a_car">Rent a car</string>
    <string name="tab_bookings">Bookings</string>
    <string name="tab_refer_a_friend">Refer a friend</string>
    <string name="tab_account">Account</string>

    <string name="icon_description">Icon</string>
    <string name="image_description">Image</string>
    <string name="button_description">Button</string>
    <string name="location">Location</string>
    <string name="current_location">Current location</string>
    <string name="date_time"><![CDATA[Date & Time]]></string>
    <string name="now">Now</string>
    <string name="one_hour">1hr</string>
    <string name="duration">Duration</string>
    <string name="go">Go</string>
    <string name="search_results">Search results</string>
    <string name="_300_cars_found"><b><font color='#FF2287'>300+</font></b> cars found</string>
    <string name="filter">Filter</string>
    <string name="map">Map</string>
    <string name="rental_fee">Rental fee</string>
    <string name="mileage_fee">Mileage fee</string>
    <string name="booking_id">Booking ID : 44123331</string>
    <string name="sample_model">Mazda 3</string>
    <string name="sample_plate_number">SMS1000Z</string>
    <string name="confirmed">Confirmed</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="sample_start_date">Mon, 1 Nov 20</string>
    <string name="sample_end_date">Tue, 2 Nov 20</string>
    <string name="sample_time">11:45am</string>
    <string name="sample_days">02</string>
    <string name="sample_hours">00</string>
    <string name="days_hours_separator">:</string>
    <string name="days">days</string>
    <string name="hours">hours</string>
    <string name="add_to_calendar">Add to calendar</string>
    <string name="extend">Extend</string>
    <string name="pick_up_car_at">Pick up car at</string>
    <string name="sample_car_park">194 Punggol Road P100 Multi Storey Car Park</string>
    <string name="get_directions">Get Directions</string>
    <string name="sample_car_lot">Level 4 / Lot 123- 456</string>
    <string name="estimated_total">Estimated total</string>
    <string name="sample_total">S$52.00</string>
    <string name="amount_is_not_final">*Amount is not final</string>
    <string name="need_help">Need help?</string>
    <string name="cancel_this_booking">Cancel this booking</string>
    <string name="booking_details">Booking Details</string>
</resources>