<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:fitsSystemWindows="true"
        app:elevation="0dp"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_gravity="center_vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/btn_back"
                    android:layout_width="@dimen/icon_button_default"
                    android:layout_height="@dimen/icon_button_default"
                    android:background="?attr/actionBarItemBackground"
                    android:contentDescription="@string/icon_description"
                    android:src="@drawable/ic_back"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/black" />

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:text="@string/search_results"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/btn_back" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_contents"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar">

        <include
            android:id="@+id/layout_rent_info"
            layout="@layout/layout_rent_info" />

        <TextView
            android:id="@+id/tv_cars_found"
            style="@style/Text.Regular"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/margin_medium_2"
            android:paddingBottom="@dimen/margin_medium_2"
            android:text="@string/_300_cars_found"
            android:textColor="@color/white"
            android:textSize="@dimen/text_regular_2_5x"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_rent_info" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/tv_filter"
            style="@style/ActionButton.SmallTextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_medium_1"
            android:letterSpacing="0"
            android:text="@string/filter"
            app:layout_constraintBottom_toBottomOf="@id/tv_cars_found"
            app:layout_constraintEnd_toStartOf="@id/tv_map"
            app:layout_constraintTop_toTopOf="@id/tv_cars_found" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/tv_map"
            style="@style/ActionButton.SmallTextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_medium_2"
            android:text="@string/map"
            app:layout_constraintBottom_toBottomOf="@id/tv_cars_found"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_cars_found" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_car_found"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/neg_margin_medium_2"
            android:overScrollMode="never"
            android:paddingHorizontal="@dimen/margin_medium_2"
            android:scrollbars="none"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_cars_found"
            tools:itemCount="4"
            tools:listitem="@layout/item_car_found" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>